--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "gulp-uglify": "~1.2.0",
     "gulp-rename": "~1.2.2",
     "gulp-watch": "~4.2.4",
-    "gulp-clean": "~0.3.1"
+    "gulp-clean": "~0.3.1",
+    "gulp-jasmine": "~2.0.1",
+    "jasmine-core": "~2.3.4",
+    "karma": "~0.12.36",
+    "karma-jasmine": "~0.3.5",
+    "phantomjs": "~1.9.17",
+    "karma-phantomjs-launcher": "~0.2.0",
+    "karma-spec-reporter": "0.0.19",
+    "gulp-karma": "0.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
